Fix alignment layout for TwentyTwenty

--- a/assets/prism/prism.css
+++ b/assets/prism/prism.css
@@ -43,7 +43,8 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1rem;
-  margin: .5em 0;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   overflow: auto;
   border-radius: 8px;
   border: none;
